2010-01-21  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: fix a duplicate store_save_ack() call in case we get
      SMSCCONN_FAILED_DISCARDED as result of our smsc routing call. In this
      case we HAVE already called the store_save_ack(), and hence yield an
      ERROR line that we're unable to unlink the file from a spool directory.

2010-01-20  Stipe Tolj  <stolj at kannel.org>
    * utils/start-stop-daemon.c: fix FreeBSD build, removed the redundant
      command here that breaks the build. NLC.

2010-01-19 Andreas Fink <andreas at fink.org>
    * gwlib/charset.c partially revert last change.
      GSM charset character 09 is encoded differently by various vendors.
      Nokia and Apple show a small c cedille.
      Ericcson and Android show a capital C cedile
      The standard GSM ETSI TS 123 038 V8.2.0 (2008-10) shows a 
      capital, even though french speakers who have invented GSM
      will agree that it most likely was meant as small (in french you dont
      write capital C cedille but you use small c cedille often).
      Capital and small c cedile get encoded into 09.
      09 gets decoded to capital c cedille as it is in the standard.

2010-01-19 Andreas Fink <andreas at fink.org>
    * gwlib/charset.c Fixed french character c cedille. In GSM 23.38-700 it 
      looks like a capital C cedille for code point 0x09. Real life phones
      however display a small c cedille for code 0x09. The change does
      encode capital and small C cedille into 0x09 and decodes to small C
      on incoming. Before a small c cedille resulted in a questionmark.

2010-01-11 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.[ch]: the search functions should return long #526
      Thanks to Stepan Seycek <s.seycek at dimoco.at> for this patch.

2010-01-11 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed #527
      Thanks to Stepan Seycek <s.seycek at dimoco.at> for this patch.

2010-01-03  Stipe Tolj  <stolj at kannel.org>